--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,9 +5,9 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About",   '#' %></li>
+      <li><%= link_to "About", '#' %></li>
       <li><%= link_to "Contact", '#' %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      <li><a href="https://news.yahoo.co.jp/">News</a></li>
     </ul>
   </nav>
 </footer>
